# milenio_challenge

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README_for_evaluators.MD  READ_ME.MD  build.sh
docs/: Doxyfile
docs/html/: dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  libcsv_8cpp.html  libcsv_8cpp__incl.map  libcsv_8cpp__incl.md5  libcsv_8hpp.html  libcsv_8hpp__dep__incl.map  libcsv_8hpp__dep__incl.md5  libcsv_8hpp__incl.map  libcsv_8hpp__incl.md5  libcsv_8hpp_source.html  src_2main_8cpp.html  tests_2main_8cpp.html  tests_8cpp.html  tests_8cpp__incl.map  tests_8cpp__incl.md5  utils_8cpp.html  utils_8cpp__incl.map  utils_8cpp__incl.md5  utils_8hpp.html  utils_8hpp__dep__incl.map  utils_8hpp__dep__incl.md5  utils_8hpp__incl.map  utils_8hpp__incl.md5  utils_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
src/: libcsv.cpp  libcsv.hpp  main.cpp  utils.cpp  utils.hpp
tests/: main.cpp  tests.cpp
